# SmartClimate

./: .gitlab-ci.yml  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  swagger.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
main/: CMakeLists.txt  idf_component.yml  main.c
main/LCD_Driver/: ST7789.c  ST7789.h
main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.c
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/RGB/: RGB.c  RGB.h
main/SD_Card/: SD_SPI.c  SD_SPI.h
main/Wireless/: Wireless.c  Wireless.h
main/captive_portal/: captive_portal.c  captive_portal.h
main/lcd_driver/: st7789.c  st7789.h
main/lcd_driver/vernon_st7789t/: vernon_st7789t.c  vernon_st7789t.h
main/log/: log.c
main/lvgl_driver/: lvgl_driver.c  lvgl_driver.h
main/rgb/: rgb.c  rgb.h
main/storage/: storage.c  storage.h
main/storage/nvs/: nvs.c  nvs.h
main/storage/sd_card/: sd_card.c  sd_card.h
main/storage/spiffs_storage/: spiffs_storage.c  spiffs_storage.h
main/time_sync/: time_sync.c  time_sync.h
main/ui/: global.c  global.h  wireless.c
main/webserver/: webserver.c  webserver.h
main/webserver/api/: api.c  api.h  json.c
main/webserver/api/v1/: v1.c  v1.h
main/webserver/html/: index.html
main/webserver/html/css/: style.css
main/webserver/html/js/: main.js
main/wireless/: wireless.c  wireless.h
main/wireless/ble/: ble.c  ble.h
main/wireless/wifi/: wifi.c  wifi.h
